--- a/styles/style.css
+++ b/styles/style.css
@@ -133,3 +133,11 @@ body{
     background-color: var(--cor-secoes);
     padding: 1.5rem;
 }
+
+@media screen and (max-width: 768px) {
+
+}
+
+@media screen and (max-width: 480px) {
+  
+}
