--- a/styles/style.css
+++ b/styles/style.css
@@ -457,3 +457,29 @@ body{
 .agenda-item-data{
     color: var(--cor-destaque);
 }
+
+/*
+    CSS -> FAQ
+*/
+
+.secao-faq{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.secao-faq summary{
+    padding-bottom: 1rem;
+}
+
+.secao-faq summary:active{
+    padding-bottom: 2rem;
+}
+
+.secao-faq b{
+    font-family: var(--fonte-secundaria), serif;
+}
+
+.resposta-faq{
+    padding: 1rem 2rem;
+}
